--- a/src/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/VideoPlayer/VideoPlayer.module.css
@@ -5,11 +5,10 @@
   margin: 80px auto;
 }
 
-.video-react .video-react-big-play-button {
+/* .video-react .video-react-big-play-button {
   left: 370px !important;
-
   top: 200px !important;
-}
+} */
 
 .leftControlButton,
 .rightControlButton {
